tests/fail/0000_type2.ec
type 'a t.
type u = 'a t.